tests/errors/ErrSint4.yogur
var a: Int
var b: Int
var c: Int

a = b = c